--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <head>
     <script src="https://d3js.org/d3.v5.js"></script>
+    <script src="topojson.min.js"></script>
     <script src="script.js"></script>
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
