--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <head>
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="topojson.min.js"></script>
-    <script src="d3-tip.js"></script>
     <script src="script.js"></script>
     
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="test"></div>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
 </body>
